clusters/saradomin/apps/aerofoil/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aerofoil
  labels:
    app.kubernetes.io/name: aerofoil
    app.kubernetes.io/part-of: switch-library
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: aerofoil
  template:
    metadata:
      annotations:
        gielinor.ftm.dev.br/secret-revision: "2"
      labels:
        app.kubernetes.io/name: aerofoil
        app.kubernetes.io/part-of: switch-library
    spec:
      nodeSelector:
        kubernetes.io/hostname: saradomin
      containers:
        - name: aerofoil
          image: luketanti/aerofoil:sha-5235c59
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8465
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: data
              mountPath: /app/data
            - name: data-host
              mountPath: /data
            - name: games
              mountPath: /games
            - name: conversion-tmp
              mountPath: /app/conversion-tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: aerofoil-config
        - name: data
          persistentVolumeClaim:
            claimName: aerofoil-data
        - name: games
          hostPath:
            path: /data/switch/games
            type: DirectoryOrCreate
        - name: data-host
          hostPath:
            path: /data
            type: Directory
        - name: conversion-tmp
          hostPath:
            path: /data/switch/conversion-tmp
            type: DirectoryOrCreate
