clusters/saradomin/apps/aerofoil/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aerofoil
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: aerofoil.saradomin
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aerofoil
                port:
                  name: http
